--- a/ansi.yaml
+++ b/ansi.yaml
@@ -45,6 +45,23 @@
         ansible_user: "{{ ssh_user }}"
         ansible_ssh_private_key_file: "/var/lib/jenkins/.ssh/my-key.pem"
         ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
+    - name: Save EC2 IP to /etc/ansible/hosts under [aws] group
+      blockinfile:
+        path: /etc/ansible/hosts
+        block: |
+          [aws]
+          {{ ec2_result.instances[0].public_ip_address }} ansible_user=ec2-user ansible_ssh_private_key_file=/var/lib/jenkins/.ssh/my-key.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
+        marker: "# {mark} ANSIBLE MANAGED EC2 HOST"
+      become: true
+
+- name: Save EC2 IP to /etc/ansible/hosts under [aws] group
+  blockinfile:
+    path: /etc/ansible/hosts
+    block: |
+      [aws]
+      {{ ec2_result.instances[0].public_ip_address }} ansible_user=ec2-user ansible_ssh_private_key_file=/var/lib/jenkins/.ssh/my-key.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
+    marker: "# {mark} ANSIBLE MANAGED EC2 HOST"
+  become: true        
 
 - name: Install Tomcat on newly launched EC2
   hosts: tomcat
