--- a/ansi.yaml
+++ b/ansi.yaml
@@ -48,7 +48,7 @@
         
     - name: Save EC2 IP to /etc/ansible/hosts under [aws] group
       blockinfile:
-        path: /var/lib/jenkins/workspace/my-ci-cd-pipeline/hosts"
+        path: /var/lib/jenkins/workspace/my-ci-cd-pipeline/hosts
         block: |
           [aws]
           {{ ec2_result.instances[0].public_ip_address }} ansible_user=ec2-user ansible_ssh_private_key_file=/var/lib/jenkins/.ssh/my-key.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
