--- a/ec2-tomcat-appserver.yaml
+++ b/ec2-tomcat-appserver.yaml
@@ -5,6 +5,7 @@
   gather_facts: false
   vars:
     ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
+    ansible_python_interpreter: /usr/bin/python3
     region: ap-south-1
     key_name: myvpc
     instance_type: t2.micro
