--- a/copy-war.yaml
+++ b/copy-war.yaml
@@ -4,7 +4,7 @@
   become: true
   vars:
     ansible_user: ec2-user
-    ansible_ssh_private_key_file: "/var/lib/jenkins/.ssh/my-key.pem"
+    ansible_ssh_private_key_file: "/var/lib/jenkins/.ssh/DevOpsKeyPair.pem"
     ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
     install_dir: /opt/tomcat
 
