--- a/copy-war.yaml
+++ b/copy-war.yaml
@@ -10,7 +10,7 @@
   tasks:
     - name: Copy WAR file to Tomcat webapps directory
       copy:
-        src: $workspace/target/webapp.war
+        src: "$workspace/target/webapp.war"
         dest: "{{ install_dir }}/webapps/ktech.war"
         owner: "tomcat"
         group: "tomcat"
