--- a/ansible/ec2-tomcat-appserver.yaml
+++ b/ansible/ec2-tomcat-appserver.yaml
@@ -1,5 +1,21 @@
 ---
-- name: Launch EC2 and Install Tomcat
+# Play 1: Fix permissions on Jenkins SSH key before provisioning EC2
+- name: Ensure Jenkins SSH key permissions are correct
+  hosts: localhost
+  connection: local
+  gather_facts: false
+  become: true
+
+  tasks:
+    - name: Ensure Jenkins SSH key has correct ownership and permissions
+      file:
+        path: /var/lib/jenkins/.ssh/my-key.pem
+        owner: jenkins
+        group: jenkins
+        mode: '0600'
+
+# Play 2: Launch EC2 and prepare for Tomcat installation
+- name: Launch EC2 and prepare for Tomcat installation
   hosts: localhost
   connection: local
   gather_facts: false
@@ -31,33 +47,39 @@
           Purpose: TomcatApp
       register: ec2_result
 
+    - name: Debug EC2 result
+      debug:
+        var: ec2_result
+
     - name: Wait for SSH to come up
       ansible.builtin.wait_for:
-        host: "{{ ec2_result.instances[0].public_ip_address }}"
+        host: "{{ ec2_result.instance.public_ip_address }}"
         port: 22
         delay: 10
         timeout: 300
         state: started
+
     - name: Add new EC2 instance to host group
       ansible.builtin.add_host:
-        name: "{{ ec2_result.instances[0].public_ip_address }}"
+        name: "{{ ec2_result.instance.public_ip_address }}"
         groups: tomcat
         ansible_user: "{{ ssh_user }}"
         ansible_ssh_private_key_file: "/var/lib/jenkins/.ssh/my-key.pem"
         ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
-        
+
     - name: Save EC2 IP to /etc/ansible/hosts under [aws] group
       blockinfile:
         path: /var/lib/jenkins/workspace/setup-tomcat/ansible/hosts
         block: |
           [aws]
-          {{ ec2_result.instances[0].public_ip_address }} ansible_user=ec2-user ansible_ssh_private_key_file=/var/lib/jenkins/.ssh/my-key.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
+          {{ ec2_result.instance.public_ip_address }} ansible_user=ec2-user ansible_ssh_private_key_file=/var/lib/jenkins/.ssh/my-key.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
         marker: "# {mark} ANSIBLE MANAGED EC2 HOST"
 
     - name: Output EC2 instance public IP
       debug:
-        msg: "New EC2 instance launched with public IP: {{ ec2_result.instances[0].public_ip_address }}"
+        msg: "New EC2 instance launched with public IP: {{ ec2_result.instance.public_ip_address }}"
 
+# Play 3: Install Tomcat on the newly launched EC2 instance
 - name: Install Tomcat on newly launched EC2
   hosts: tomcat
   become: true
